# csv

./: .gitignore  README.md  analysis_evoplay.md  analysis_playson_sre.md  generate_all.py  pdf_to_json_final.py  pdf_to_json_improved.py  resume_builder.py  start.md
data-mining/: 1.top-50.md  claude-research.md
resume_blocks/: README.md  experience_blocks.json  personal_info.json  professional_summaries.json  resume_templates.json  technical_skills.json
sources/devops/: PAVEL SCHEKIN S-L-DEVOPS-202505_final.json  PAVEL SCHEKIN S-L-DEVOPS-202505_improved.json  Resume_Pavel_Shchokin_DevOps_last_final.json  Resume_Pavel_Shchokin_DevOps_last_improved.json  all_resumes_final.json  all_resumes_improved.json
v2/: README.md  pyproject.toml
v2/configs/: blocks.json
v2/configs/templates/: blockchain_startup.yaml  fintech_focused.yaml  senior_devops.yaml  senior_devops_standard.yaml
v2/docs/: architecture.md
v2/src/resume_orchestrator/: __init__.py  cli.py  composer.py  data_models.py  data_store.py  filters.py  loaders.py  settings.py
v2/src/resume_orchestrator/exporters/: __init__.py  base.py  markdown.py  pdf.py
v2/tests/: test_filters.py
v2/tools/: sync_blocks.py  vacancy_digest.py
vacancies/: example1.txt
